# multisnakegame

./: Cargo.toml  README.md
networking/: Cargo.toml
networking-macros/: Cargo.toml
networking-macros/src/: lib.rs
networking/src/: lib.rs  packet.rs
src/: common.rs  food.rs  main.rs  snake.rs  state.rs  ui.rs
src/client/: client.rs  client_handle.rs  mod.rs  resources.rs
src/common/: components.rs  constants.rs  mod.rs  quinn_helpers.rs
src/food/: client.rs  components.rs  mod.rs  resources.rs  server.rs
src/lobby/: resources.rs  server.rs
src/networking/: client_packets.rs  mod.rs  packet.rs  quinn_helpers.rs  server_packets.rs
src/networking/lobby/: client_packets.rs  server_packets.rs
src/server/: mod.rs  resources.rs  server.rs  server_handle.rs
src/snake/: client.rs  components.rs  mod.rs  resources.rs  server.rs
src/ui/: components.rs  mainmenu.rs
