[package]
name = "snakegame"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.8.1" }
bimap = "0.6.2"
bytes = "1.2.1"
crossbeam-queue = "0.3.7"
hashbrown = "0.13.1"
iyes_loopless = "0.8.0"
quinn = "0.9.0"
rand = "0.8.5"
rcgen = "0.10.0"
rustls = { version = "0.20.7", default-features = false, features = ["quic", "dangerous_configuration"] }
thiserror = "1.0.37"
tokio = { version = "1.21.2", features = ["full"] }

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = "thin"
