[package]
name = "snakegame"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]

members = [
    "networking",
    "networking-macros"
]

[dependencies]
bevy = { version = "0.8.1" }
bytes = "1.2.1"
derive_more = "0.99.17"
hashbrown = "0.13.1"
iyes_loopless = "0.8.0"
rand = "0.8.5"
tokio = { version = "1.21.2", features = ["full"] }
networking = { path = "networking" }
networking-macros = { path = "networking-macros" }
futures-lite = "1.12.0"
bincode = "1.3.3"
serde = { version = "1.0", features = ["derive"] }

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = "thin"
